--- a/ORBank_2.0/ORBank_2.0.csproj
+++ b/ORBank_2.0/ORBank_2.0.csproj
@@ -62,11 +62,18 @@
       <DependentUpon>Admin.cs</DependentUpon>
     </Compile>
     <Compile Include="Bank.cs" />
+    <Compile Include="Deposit.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Main.Designer.cs">
+      <DependentUpon>Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -83,6 +90,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Main.resx">
+      <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -114,6 +124,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\VwCN.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\K6x.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ZXv0.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pass.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
