--- a/ORBank_2.0/ORBank_2.0.csproj
+++ b/ORBank_2.0/ORBank_2.0.csproj
@@ -62,12 +62,25 @@
       <DependentUpon>Admin.cs</DependentUpon>
     </Compile>
     <Compile Include="Bank.cs" />
-    <Compile Include="Deposit.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="CreateDeposit.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="CreateDeposit.Designer.cs">
+      <DependentUpon>CreateDeposit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Credit.cs" />
+    <Compile Include="Deposit.cs" />
+    <Compile Include="Forgot.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forgot.Designer.cs">
+      <DependentUpon>Forgot.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SignIn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SignIn.Designer.cs">
+      <DependentUpon>SignIn.cs</DependentUpon>
     </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -88,8 +101,14 @@
     <EmbeddedResource Include="Admin.resx">
       <DependentUpon>Admin.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="CreateDeposit.resx">
+      <DependentUpon>CreateDeposit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forgot.resx">
+      <DependentUpon>Forgot.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SignIn.resx">
+      <DependentUpon>SignIn.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
@@ -108,6 +127,8 @@
       <DependentUpon>Registration.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\Credit.datasource" />
+    <None Include="Properties\DataSources\Deposit.datasource" />
     <None Include="Properties\DataSources\Users.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
